--- a/themes/zolarwind/i18n/en.toml
+++ b/themes/zolarwind/i18n/en.toml
@@ -1,20 +1,20 @@
 # Global settings
 settings_locale = "en"
-settings_date_locale = "en_US"
+settings_date_locale = "ro_RO" # "en_US"
 settings_date_format = "%B %d, %Y"
 
 # Simple language resources
-empty_page_title = "Empty title"
-empty_page_description = "Empty description"
-read_more = "Read more"
-previous_posts = "Previous posts"
-next_posts = "Next posts"
+empty_page_title = "Fără titlu"
+empty_page_description = "Fără descriere"
+read_more = "Citește mai mult"
+previous_posts = "Postări recente"
+next_posts = "Postări vechi"
 reading_time = "reading time"
-aria_to_homepage = "Go to homepage"
-aria_menu = "Menu"
-with_tag = "with tag"
-not_found_header = "The page you requested could not be found."
-not_found_text = "Oops! Seems like this page vanished into the internet abyss. Maybe it's on vacation? Please check the URL or ping me, and I'll see if I can locate it, or at least send out a search party."
+aria_to_homepage = "Mergi la început"
+aria_menu = "Meniu"
+with_tag = "cu tag"
+not_found_header = "Pagina cerută nu există"
+not_found_text = "Oops! Se pare că pagina cerută nu există."
 
 # Nouns with singular and plural
 [words]
@@ -26,9 +26,9 @@ one = "minute"
 other = "minutes"
 
 [posts]
-one = "post"
-other = "posts"
+one = "postare"
+other = "postări"
 
 [tags]
 one = "tag"
-other = "tags"
+other = "tag-uri"
